--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@radix-ui/react-toggle-group": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.2.0",
     "@tanstack/react-query": "^5.60.5",
+    "@tma.js/init-data-node": "^2.0.6",
     "@types/memoizee": "^0.4.12",
     "@types/pdfkit": "^0.17.4",
     "@types/qrcode": "^1.5.6",
