Enhance admin and investment features with demo mode and event logging
- Integrated demo mode functionality across admin pages, displaying a demo mode banner based on user status.
- Improved landing page with loading indicators for demo admin login.
- Added live metrics display for investment strategies, including performance indicators and trade events.
- Implemented event logging for trade actions, capturing trade intents and order placements.
- Enhanced portfolio reconciliation process with detailed reporting on equity discrepancies.
- Introduced new API endpoints for fetching trade events and live metrics for user strategies.
- Updated UI components to support new features, including badges and live updates.

--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "test:all": "npm run typecheck && npm run test && npm run build",
     "check:security": "tsx scripts/check-security.ts",
     "audit:fix": "npm audit fix",
-    "smoke": "tsx scripts/smoke-test.ts"
+    "smoke": "tsx scripts/smoke-test.ts",
+    "market:bootstrap": "tsx -e \"import('./server/market/binanceVisionImporter.js').then(m => import('./server/app/marketUniverse.js').then(u => import('./server/storage.js').then(s => { const storage = s.storage; u.getMarketUniverse(storage).then(universe => m.bootstrapUniverse(universe, {monthsBack:6, daysBackForCurrentMonth:14}, storage).then(r => { console.log('Bootstrap complete:', r); process.exit(0); }))); })))\"",
+    "market:calibrate": "tsx -e \"import('./server/app/marketCalibrationService.js').then(m => import('./server/app/marketUniverse.js').then(u => import('./server/storage.js').then(s => { const storage = s.storage; u.getMarketUniverse(storage).then(universe => Promise.all(universe.map(market => m.calibrateFromDb({exchange:market.exchange, symbol:market.symbol, timeframe:market.timeframe, windowDays:180}).catch(e => ({reason: e.message}))))).then(results => { console.log('Calibration complete:', results); process.exit(0); }); })))\"",
+    "strategies:calibrate": "tsx scripts/calibrate-strategies.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
