Add invest E2E coverage and fix portfolio cash

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "db:migrate": "echo 'Note: drizzle-kit migrate may not be available. Apply migrations manually with: psql $DATABASE_URL -f migrations/XXXX_*.sql' && drizzle-kit migrate || echo 'If migrate fails, apply SQL files manually from migrations/ directory'",
     "db:push": "drizzle-kit push",
     "test": "NODE_ENV=test vitest run",
-    "test:e2e": "NODE_ENV=test vitest run server/__tests__/e2e",
+    "test:e2e": "playwright test",
+    "test:e2e:api": "NODE_ENV=test vitest run server/__tests__/e2e",
     "test:playwright": "playwright test",
     "test:playwright:ui": "playwright test --ui",
     "typecheck": "tsc --noEmit",
