Add vitest deps and config

--- a/package.json
+++ b/package.json
@@ -11,15 +11,17 @@
     "db:generate": "drizzle-kit generate",
     "db:migrate": "echo 'Note: drizzle-kit migrate may not be available. Apply migrations manually with: psql $DATABASE_URL -f migrations/XXXX_*.sql' && drizzle-kit migrate || echo 'If migrate fails, apply SQL files manually from migrations/ directory'",
     "db:push": "drizzle-kit push",
-    "test": "NODE_ENV=test vitest run",
+    "test": "vitest run",
     "test:e2e": "playwright test",
-    "test:e2e:api": "NODE_ENV=test vitest run server/__tests__/e2e",
+    "test:e2e:api": "vitest run server/__tests__/e2e",
     "test:playwright": "playwright test",
     "test:playwright:ui": "playwright test --ui",
+    "test:watch": "vitest",
     "typecheck": "tsc --noEmit",
     "lint": "echo 'Linting not configured - run typecheck instead' && npm run typecheck",
     "test:all": "npm run typecheck && npm run test && npm run build",
     "check:security": "tsx scripts/check-security.ts",
+    "coverage": "vitest run --coverage",
     "audit:fix": "npm audit fix",
     "smoke": "tsx scripts/smoke-test.ts",
     "market:bootstrap": "tsx -e \"import('./server/market/binanceVisionImporter.js').then(m => import('./server/app/marketUniverse.js').then(u => import('./server/storage.js').then(s => { const storage = s.storage; u.getMarketUniverse(storage).then(universe => m.bootstrapUniverse(universe, {monthsBack:6, daysBackForCurrentMonth:14}, storage).then(r => { console.log('Bootstrap complete:', r); process.exit(0); }))); })))\"",
@@ -102,7 +104,6 @@
     "tailwindcss-animate": "^1.0.7",
     "tw-animate-css": "^1.2.5",
     "vaul": "^1.1.2",
-    "vitest": "^4.0.17",
     "wouter": "^3.3.5",
     "ws": "^8.18.0",
     "zod": "^3.24.2",
@@ -125,14 +126,17 @@
     "@types/react-dom": "^18.3.1",
     "@types/ws": "^8.5.13",
     "@vitejs/plugin-react": "^4.7.0",
+    "@vitest/coverage-v8": "^4.0.17",
     "autoprefixer": "^10.4.20",
     "drizzle-kit": "^0.31.8",
     "esbuild": "^0.25.0",
+    "jsdom": "^26.1.0",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.17",
     "tsx": "^4.20.5",
     "typescript": "5.6.3",
-    "vite": "^7.3.0"
+    "vite": "^7.3.0",
+    "vitest": "^4.0.17"
   },
   "overrides": {
     "drizzle-kit": {
